[project]
name = "canary-cd"
version = "0.1.dev3"
description = "Continuous Deployment API for Container and Static Pages"
authors = [{ name = "Dominique Rehborn", email = "dominique@rehborn.dev" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "gitpython (>=3.1.44,<4.0.0)",
    "pygithub (>=2.5.0,<3.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    # "Programming Language :: Python :: 3.14",
    # "Programming Language :: Python :: 3.15",
]
[project.urls]
documentation = "https://docs.rehborn.dev"
source = "https://github.com/rehborn/canary-cd.git"

[project.scripts]
canary-cd = "canary_cd.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "coverage>=7.6.9,<8",
    "pylint>=3.3.3,<4",
    "httpx>=0.28.1,<0.29",
    "pytest-dependency>=0.6.0",
]
