[project]
name = "canary-cd"
version = "0.1.dev3"
description = "Continuous Deployment API for Container and Static Pages"
authors = [{ name = "Dominique Rehborn", email = "dominique@rehborn.dev" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "fastapi (>=0.119.0,<0.120.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "gitpython (>=3.1.44,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "cryptography>=45.0.7",
    "requests>=2.32.5",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    # "Programming Language :: Python :: 3.14",
    # "Programming Language :: Python :: 3.15",
]
[project.urls]
documentation = "https://docs.rehborn.dev"
source = "https://github.com/rehborn/canary-cd.git"

[project.scripts]
canary-cd = "canary_cd.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "canary_cd/",
  "tests",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "coverage>=7.6.9,<8",
    "pylint>=3.3.3,<4",
    "httpx>=0.28.1,<0.29",
    "pytest-dependency>=0.6.0",
]
