[project]
name = "canary-cd"
version = "0.1.dev3"
description = "Continuous Deployment API for Container and Static Pages"
authors = [{ name = "Dominique Rehborn", email = "dominique@rehborn.dev" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "fastapi (>=0.128.3,<0.129.0)",
    "sqlmodel (>=0.0.32,<0.0.33)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "gitpython (>=3.1.44,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "cryptography>=45.0.7",
    "requests>=2.32.5",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    # "Programming Language :: Python :: 3.14",
    # "Programming Language :: Python :: 3.15",
]
[project.urls]
documentation = "https://docs.rehborn.dev"
source = "https://github.com/rehborn/canary-cd.git"

[project.scripts]
canary-cd = "canary_cd.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "canary_cd/",
  "tests",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "coverage>=7.6.9,<8",
    "pylint>=4.0.5,<5",
    "httpx>=0.28.1,<0.29",
    "pytest-dependency>=0.6.0",
]
